cdk.out/MyCdkProjectStack.template.json
{
 "Resources": {
  "vpc0f5fcf532ec74af324A7E5CEA": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyCdkProjectStack/vpc-0f5fcf532ec74af32"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/Resource"
   }
  },
  "vpc0f5fcf532ec74af32PublicSubnet1SubnetFEF97EA5": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2a",
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "vpc0f5fcf532ec74af324A7E5CEA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PublicSubnet1/Subnet"
   }
  },
  "vpc0f5fcf532ec74af32PublicSubnet1RouteTable8AFCAF5F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "vpc0f5fcf532ec74af324A7E5CEA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PublicSubnet1/RouteTable"
   }
  },
  "vpc0f5fcf532ec74af32PublicSubnet1RouteTableAssociation6DA9B97A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpc0f5fcf532ec74af32PublicSubnet1RouteTable8AFCAF5F"
    },
    "SubnetId": {
     "Ref": "vpc0f5fcf532ec74af32PublicSubnet1SubnetFEF97EA5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PublicSubnet1/RouteTableAssociation"
   }
  },
  "vpc0f5fcf532ec74af32PublicSubnet1DefaultRoute62353168": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpc0f5fcf532ec74af32IGWC186A45E"
    },
    "RouteTableId": {
     "Ref": "vpc0f5fcf532ec74af32PublicSubnet1RouteTable8AFCAF5F"
    }
   },
   "DependsOn": [
    "vpc0f5fcf532ec74af32VPCGW555478F1"
   ],
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PublicSubnet1/DefaultRoute"
   }
  },
  "vpc0f5fcf532ec74af32PublicSubnet1EIP4DE0E89C": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PublicSubnet1/EIP"
   }
  },
  "vpc0f5fcf532ec74af32PublicSubnet1NATGateway52033961": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "vpc0f5fcf532ec74af32PublicSubnet1EIP4DE0E89C",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "vpc0f5fcf532ec74af32PublicSubnet1SubnetFEF97EA5"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "vpc0f5fcf532ec74af32PublicSubnet1DefaultRoute62353168",
    "vpc0f5fcf532ec74af32PublicSubnet1RouteTableAssociation6DA9B97A"
   ],
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PublicSubnet1/NATGateway"
   }
  },
  "vpc0f5fcf532ec74af32PublicSubnet2SubnetC5BF2628": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2b",
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "vpc0f5fcf532ec74af324A7E5CEA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PublicSubnet2/Subnet"
   }
  },
  "vpc0f5fcf532ec74af32PublicSubnet2RouteTable231966B2": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "vpc0f5fcf532ec74af324A7E5CEA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PublicSubnet2/RouteTable"
   }
  },
  "vpc0f5fcf532ec74af32PublicSubnet2RouteTableAssociation671740A7": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpc0f5fcf532ec74af32PublicSubnet2RouteTable231966B2"
    },
    "SubnetId": {
     "Ref": "vpc0f5fcf532ec74af32PublicSubnet2SubnetC5BF2628"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PublicSubnet2/RouteTableAssociation"
   }
  },
  "vpc0f5fcf532ec74af32PublicSubnet2DefaultRoute152AAEB1": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpc0f5fcf532ec74af32IGWC186A45E"
    },
    "RouteTableId": {
     "Ref": "vpc0f5fcf532ec74af32PublicSubnet2RouteTable231966B2"
    }
   },
   "DependsOn": [
    "vpc0f5fcf532ec74af32VPCGW555478F1"
   ],
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PublicSubnet2/DefaultRoute"
   }
  },
  "vpc0f5fcf532ec74af32PrivateSubnet1SubnetAD158F9C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2a",
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "vpc0f5fcf532ec74af324A7E5CEA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PrivateSubnet1/Subnet"
   }
  },
  "vpc0f5fcf532ec74af32PrivateSubnet1RouteTable5E6E6F3B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "vpc0f5fcf532ec74af324A7E5CEA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PrivateSubnet1/RouteTable"
   }
  },
  "vpc0f5fcf532ec74af32PrivateSubnet1RouteTableAssociationD392FFDC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpc0f5fcf532ec74af32PrivateSubnet1RouteTable5E6E6F3B"
    },
    "SubnetId": {
     "Ref": "vpc0f5fcf532ec74af32PrivateSubnet1SubnetAD158F9C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "vpc0f5fcf532ec74af32PrivateSubnet1DefaultRouteC70DCD93": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "vpc0f5fcf532ec74af32PublicSubnet1NATGateway52033961"
    },
    "RouteTableId": {
     "Ref": "vpc0f5fcf532ec74af32PrivateSubnet1RouteTable5E6E6F3B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PrivateSubnet1/DefaultRoute"
   }
  },
  "vpc0f5fcf532ec74af32PrivateSubnet2SubnetBBFAB090": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2b",
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "vpc0f5fcf532ec74af324A7E5CEA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PrivateSubnet2/Subnet"
   }
  },
  "vpc0f5fcf532ec74af32PrivateSubnet2RouteTableF1D31DA3": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "vpc0f5fcf532ec74af324A7E5CEA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PrivateSubnet2/RouteTable"
   }
  },
  "vpc0f5fcf532ec74af32PrivateSubnet2RouteTableAssociation7005E81C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpc0f5fcf532ec74af32PrivateSubnet2RouteTableF1D31DA3"
    },
    "SubnetId": {
     "Ref": "vpc0f5fcf532ec74af32PrivateSubnet2SubnetBBFAB090"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "vpc0f5fcf532ec74af32PrivateSubnet2DefaultRoute9E150311": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "vpc0f5fcf532ec74af32PublicSubnet1NATGateway52033961"
    },
    "RouteTableId": {
     "Ref": "vpc0f5fcf532ec74af32PrivateSubnet2RouteTableF1D31DA3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/PrivateSubnet2/DefaultRoute"
   }
  },
  "vpc0f5fcf532ec74af32IGWC186A45E": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyCdkProjectStack/vpc-0f5fcf532ec74af32"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/IGW"
   }
  },
  "vpc0f5fcf532ec74af32VPCGW555478F1": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "vpc0f5fcf532ec74af32IGWC186A45E"
    },
    "VpcId": {
     "Ref": "vpc0f5fcf532ec74af324A7E5CEA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/vpc-0f5fcf532ec74af32/VPCGW"
   }
  },
  "DBCredentialsSecretAFB45EA2": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "GenerateSecretString": {
     "ExcludePunctuation": true,
     "GenerateStringKey": "password",
     "IncludeSpace": false,
     "SecretStringTemplate": "{\"username\":\"admin\"}"
    },
    "Name": "rds-credentials"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/DBCredentialsSecret/Resource"
   }
  },
  "DBCredentialsSecretAttachment8D28662C": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "DBCredentialsSecretAFB45EA2"
    },
    "TargetId": {
     "Ref": "MyRdsInstanceFB602CDD"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/DBCredentialsSecret/Attachment/Resource"
   }
  },
  "MyRdsInstanceSubnetGroup1D56B42D": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for MyRdsInstance database",
    "SubnetIds": [
     {
      "Ref": "vpc0f5fcf532ec74af32PrivateSubnet1SubnetAD158F9C"
     },
     {
      "Ref": "vpc0f5fcf532ec74af32PrivateSubnet2SubnetBBFAB090"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/MyRdsInstance/SubnetGroup/Default"
   }
  },
  "MyRdsInstanceSecurityGroup433C5D4C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for MyRdsInstance database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "vpc0f5fcf532ec74af324A7E5CEA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/MyRdsInstance/SecurityGroup/Resource"
   }
  },
  "MyRdsInstanceSecurityGroupfromMyCdkProjectStackMyFunctionSecurityGroupEC5F9B61IndirectPortEEF34E34": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "from MyCdkProjectStackMyFunctionSecurityGroupEC5F9B61:{IndirectPort}",
    "FromPort": {
     "Fn::GetAtt": [
      "MyRdsInstanceFB602CDD",
      "Endpoint.Port"
     ]
    },
    "GroupId": {
     "Fn::GetAtt": [
      "MyRdsInstanceSecurityGroup433C5D4C",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "MyFunctionSecurityGroup5241BB0E",
      "GroupId"
     ]
    },
    "ToPort": {
     "Fn::GetAtt": [
      "MyRdsInstanceFB602CDD",
      "Endpoint.Port"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/MyRdsInstance/SecurityGroup/from MyCdkProjectStackMyFunctionSecurityGroupEC5F9B61:{IndirectPort}"
   }
  },
  "MyRdsInstanceFB602CDD": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t3.micro",
    "DBName": "my_db",
    "DBSubnetGroupName": {
     "Ref": "MyRdsInstanceSubnetGroup1D56B42D"
    },
    "DeletionProtection": false,
    "EnableIAMDatabaseAuthentication": true,
    "Engine": "mysql",
    "EngineVersion": "8.0.39",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "DBCredentialsSecretAFB45EA2"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "DBCredentialsSecretAFB45EA2"
       },
       ":SecretString:username::}}"
      ]
     ]
    },
    "MaxAllocatedStorage": 100,
    "MultiAZ": false,
    "PubliclyAccessible": false,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "MyRdsInstanceSecurityGroup433C5D4C",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Snapshot",
   "DeletionPolicy": "Snapshot",
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/MyRdsInstance/Resource"
   }
  },
  "MyFunctionServiceRole3C357FF2": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
       ]
      ]
     }
    ]
   },
   "DependsOn": [
    "vpc0f5fcf532ec74af32PrivateSubnet1DefaultRouteC70DCD93",
    "vpc0f5fcf532ec74af32PrivateSubnet1RouteTableAssociationD392FFDC",
    "vpc0f5fcf532ec74af32PrivateSubnet2DefaultRoute9E150311",
    "vpc0f5fcf532ec74af32PrivateSubnet2RouteTableAssociation7005E81C"
   ],
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/MyFunction/ServiceRole/Resource"
   }
  },
  "MyFunctionServiceRoleDefaultPolicyB705ABD4": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "rds:Connect",
       "Effect": "Allow",
       "Resource": "arn:aws:rds-db:us-east-2:418295685153:db-MV2OPHUTKOP2PEUN5E343DQ2H4/special_user"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "MyFunctionServiceRoleDefaultPolicyB705ABD4",
    "Roles": [
     {
      "Ref": "MyFunctionServiceRole3C357FF2"
     }
    ]
   },
   "DependsOn": [
    "vpc0f5fcf532ec74af32PrivateSubnet1DefaultRouteC70DCD93",
    "vpc0f5fcf532ec74af32PrivateSubnet1RouteTableAssociationD392FFDC",
    "vpc0f5fcf532ec74af32PrivateSubnet2DefaultRoute9E150311",
    "vpc0f5fcf532ec74af32PrivateSubnet2RouteTableAssociation7005E81C"
   ],
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/MyFunction/ServiceRole/DefaultPolicy/Resource"
   }
  },
  "MyFunctionSecurityGroup5241BB0E": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatic security group for Lambda Function MyCdkProjectStackMyFunctionB3F2DF16",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "vpc0f5fcf532ec74af324A7E5CEA"
    }
   },
   "DependsOn": [
    "vpc0f5fcf532ec74af32PrivateSubnet1DefaultRouteC70DCD93",
    "vpc0f5fcf532ec74af32PrivateSubnet1RouteTableAssociationD392FFDC",
    "vpc0f5fcf532ec74af32PrivateSubnet2DefaultRoute9E150311",
    "vpc0f5fcf532ec74af32PrivateSubnet2RouteTableAssociation7005E81C"
   ],
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/MyFunction/SecurityGroup/Resource"
   }
  },
  "MyFunction3BAA72D1": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-418295685153-us-east-2",
     "S3Key": "f2002b3ca166f170958762932819b50e01a99244026af5fa24f05b2d11109a04.zip"
    },
    "Environment": {
     "Variables": {
      "DB_HOST": {
       "Fn::GetAtt": [
        "MyRdsInstanceFB602CDD",
        "Endpoint.Address"
       ]
      },
      "DB_NAME": "my_db",
      "DB_USER": {
       "Fn::Join": [
        "",
        [
         "{{resolve:secretsmanager:",
         {
          "Ref": "DBCredentialsSecretAFB45EA2"
         },
         ":SecretString:username::}}"
        ]
       ]
      },
      "DB_PASSWORD": {
       "Fn::Join": [
        "",
        [
         "{{resolve:secretsmanager:",
         {
          "Ref": "DBCredentialsSecretAFB45EA2"
         },
         ":SecretString:password::}}"
        ]
       ]
      }
     }
    },
    "Handler": "lambda_function.lambda_handler",
    "Role": {
     "Fn::GetAtt": [
      "MyFunctionServiceRole3C357FF2",
      "Arn"
     ]
    },
    "Runtime": "python3.8",
    "VpcConfig": {
     "SecurityGroupIds": [
      {
       "Fn::GetAtt": [
        "MyFunctionSecurityGroup5241BB0E",
        "GroupId"
       ]
      }
     ],
     "SubnetIds": [
      {
       "Ref": "vpc0f5fcf532ec74af32PrivateSubnet1SubnetAD158F9C"
      },
      {
       "Ref": "vpc0f5fcf532ec74af32PrivateSubnet2SubnetBBFAB090"
      }
     ]
    }
   },
   "DependsOn": [
    "MyFunctionServiceRoleDefaultPolicyB705ABD4",
    "MyFunctionServiceRole3C357FF2",
    "vpc0f5fcf532ec74af32PrivateSubnet1DefaultRouteC70DCD93",
    "vpc0f5fcf532ec74af32PrivateSubnet1RouteTableAssociationD392FFDC",
    "vpc0f5fcf532ec74af32PrivateSubnet2DefaultRoute9E150311",
    "vpc0f5fcf532ec74af32PrivateSubnet2RouteTableAssociation7005E81C"
   ],
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/MyFunction/Resource",
    "aws:asset:path": "asset.f2002b3ca166f170958762932819b50e01a99244026af5fa24f05b2d11109a04",
    "aws:asset:is-bundled": false,
    "aws:asset:property": "Code"
   }
  },
  "httpszl0eev7952executeapiuseast2amazonawscomprod6204E03C": {
   "Type": "AWS::ApiGateway::RestApi",
   "Properties": {
    "Name": "https://zl0eev7952.execute-api.us-east-2.amazonaws.com/prod"
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/https:----zl0eev7952.execute-api.us-east-2.amazonaws.com--prod/Resource"
   }
  },
  "httpszl0eev7952executeapiuseast2amazonawscomprodCloudWatchRole68DB612C": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "apigateway.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs"
       ]
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/https:----zl0eev7952.execute-api.us-east-2.amazonaws.com--prod/CloudWatchRole/Resource"
   }
  },
  "httpszl0eev7952executeapiuseast2amazonawscomprodAccount34FDFC93": {
   "Type": "AWS::ApiGateway::Account",
   "Properties": {
    "CloudWatchRoleArn": {
     "Fn::GetAtt": [
      "httpszl0eev7952executeapiuseast2amazonawscomprodCloudWatchRole68DB612C",
      "Arn"
     ]
    }
   },
   "DependsOn": [
    "httpszl0eev7952executeapiuseast2amazonawscomprod6204E03C"
   ],
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/https:----zl0eev7952.execute-api.us-east-2.amazonaws.com--prod/Account"
   }
  },
  "httpszl0eev7952executeapiuseast2amazonawscomprodDeployment36F3DA32cb165cbdc556fc269b80faa04e0cc1ac": {
   "Type": "AWS::ApiGateway::Deployment",
   "Properties": {
    "Description": "Automatically created by the RestApi construct",
    "RestApiId": {
     "Ref": "httpszl0eev7952executeapiuseast2amazonawscomprod6204E03C"
    }
   },
   "DependsOn": [
    "httpszl0eev7952executeapiuseast2amazonawscomproditemsGETEF452636",
    "httpszl0eev7952executeapiuseast2amazonawscomproditemsPOST5D79E9FF",
    "httpszl0eev7952executeapiuseast2amazonawscomproditems0047AB66"
   ],
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/https:----zl0eev7952.execute-api.us-east-2.amazonaws.com--prod/Deployment/Resource"
   }
  },
  "httpszl0eev7952executeapiuseast2amazonawscomprodDeploymentStageprodD75B1C25": {
   "Type": "AWS::ApiGateway::Stage",
   "Properties": {
    "DeploymentId": {
     "Ref": "httpszl0eev7952executeapiuseast2amazonawscomprodDeployment36F3DA32cb165cbdc556fc269b80faa04e0cc1ac"
    },
    "RestApiId": {
     "Ref": "httpszl0eev7952executeapiuseast2amazonawscomprod6204E03C"
    },
    "StageName": "prod"
   },
   "DependsOn": [
    "httpszl0eev7952executeapiuseast2amazonawscomprodAccount34FDFC93"
   ],
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/https:----zl0eev7952.execute-api.us-east-2.amazonaws.com--prod/DeploymentStage.prod/Resource"
   }
  },
  "httpszl0eev7952executeapiuseast2amazonawscomproditems0047AB66": {
   "Type": "AWS::ApiGateway::Resource",
   "Properties": {
    "ParentId": {
     "Fn::GetAtt": [
      "httpszl0eev7952executeapiuseast2amazonawscomprod6204E03C",
      "RootResourceId"
     ]
    },
    "PathPart": "items",
    "RestApiId": {
     "Ref": "httpszl0eev7952executeapiuseast2amazonawscomprod6204E03C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/https:----zl0eev7952.execute-api.us-east-2.amazonaws.com--prod/Default/items/Resource"
   }
  },
  "httpszl0eev7952executeapiuseast2amazonawscomproditemsGETApiPermissionMyCdkProjectStackhttpszl0eev7952executeapiuseast2amazonawscomprod368B5EF1GETitems0BE18241": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "MyFunction3BAA72D1",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:",
       {
        "Ref": "AWS::Partition"
       },
       ":execute-api:us-east-2:418295685153:",
       {
        "Ref": "httpszl0eev7952executeapiuseast2amazonawscomprod6204E03C"
       },
       "/",
       {
        "Ref": "httpszl0eev7952executeapiuseast2amazonawscomprodDeploymentStageprodD75B1C25"
       },
       "/GET/items"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/https:----zl0eev7952.execute-api.us-east-2.amazonaws.com--prod/Default/items/GET/ApiPermission.MyCdkProjectStackhttpszl0eev7952executeapiuseast2amazonawscomprod368B5EF1.GET..items"
   }
  },
  "httpszl0eev7952executeapiuseast2amazonawscomproditemsGETApiPermissionTestMyCdkProjectStackhttpszl0eev7952executeapiuseast2amazonawscomprod368B5EF1GETitemsFAFF5484": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "MyFunction3BAA72D1",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:",
       {
        "Ref": "AWS::Partition"
       },
       ":execute-api:us-east-2:418295685153:",
       {
        "Ref": "httpszl0eev7952executeapiuseast2amazonawscomprod6204E03C"
       },
       "/test-invoke-stage/GET/items"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/https:----zl0eev7952.execute-api.us-east-2.amazonaws.com--prod/Default/items/GET/ApiPermission.Test.MyCdkProjectStackhttpszl0eev7952executeapiuseast2amazonawscomprod368B5EF1.GET..items"
   }
  },
  "httpszl0eev7952executeapiuseast2amazonawscomproditemsGETEF452636": {
   "Type": "AWS::ApiGateway::Method",
   "Properties": {
    "AuthorizationType": "NONE",
    "HttpMethod": "GET",
    "Integration": {
     "IntegrationHttpMethod": "POST",
     "Type": "AWS_PROXY",
     "Uri": {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":apigateway:us-east-2:lambda:path/2015-03-31/functions/",
        {
         "Fn::GetAtt": [
          "MyFunction3BAA72D1",
          "Arn"
         ]
        },
        "/invocations"
       ]
      ]
     }
    },
    "ResourceId": {
     "Ref": "httpszl0eev7952executeapiuseast2amazonawscomproditems0047AB66"
    },
    "RestApiId": {
     "Ref": "httpszl0eev7952executeapiuseast2amazonawscomprod6204E03C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/https:----zl0eev7952.execute-api.us-east-2.amazonaws.com--prod/Default/items/GET/Resource"
   }
  },
  "httpszl0eev7952executeapiuseast2amazonawscomproditemsPOSTApiPermissionMyCdkProjectStackhttpszl0eev7952executeapiuseast2amazonawscomprod368B5EF1POSTitems22AAF940": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "MyFunction3BAA72D1",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:",
       {
        "Ref": "AWS::Partition"
       },
       ":execute-api:us-east-2:418295685153:",
       {
        "Ref": "httpszl0eev7952executeapiuseast2amazonawscomprod6204E03C"
       },
       "/",
       {
        "Ref": "httpszl0eev7952executeapiuseast2amazonawscomprodDeploymentStageprodD75B1C25"
       },
       "/POST/items"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/https:----zl0eev7952.execute-api.us-east-2.amazonaws.com--prod/Default/items/POST/ApiPermission.MyCdkProjectStackhttpszl0eev7952executeapiuseast2amazonawscomprod368B5EF1.POST..items"
   }
  },
  "httpszl0eev7952executeapiuseast2amazonawscomproditemsPOSTApiPermissionTestMyCdkProjectStackhttpszl0eev7952executeapiuseast2amazonawscomprod368B5EF1POSTitems47F3D1B2": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "MyFunction3BAA72D1",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:",
       {
        "Ref": "AWS::Partition"
       },
       ":execute-api:us-east-2:418295685153:",
       {
        "Ref": "httpszl0eev7952executeapiuseast2amazonawscomprod6204E03C"
       },
       "/test-invoke-stage/POST/items"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/https:----zl0eev7952.execute-api.us-east-2.amazonaws.com--prod/Default/items/POST/ApiPermission.Test.MyCdkProjectStackhttpszl0eev7952executeapiuseast2amazonawscomprod368B5EF1.POST..items"
   }
  },
  "httpszl0eev7952executeapiuseast2amazonawscomproditemsPOST5D79E9FF": {
   "Type": "AWS::ApiGateway::Method",
   "Properties": {
    "AuthorizationType": "NONE",
    "HttpMethod": "POST",
    "Integration": {
     "IntegrationHttpMethod": "POST",
     "Type": "AWS_PROXY",
     "Uri": {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":apigateway:us-east-2:lambda:path/2015-03-31/functions/",
        {
         "Fn::GetAtt": [
          "MyFunction3BAA72D1",
          "Arn"
         ]
        },
        "/invocations"
       ]
      ]
     }
    },
    "ResourceId": {
     "Ref": "httpszl0eev7952executeapiuseast2amazonawscomproditems0047AB66"
    },
    "RestApiId": {
     "Ref": "httpszl0eev7952executeapiuseast2amazonawscomprod6204E03C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/https:----zl0eev7952.execute-api.us-east-2.amazonaws.com--prod/Default/items/POST/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31STW/CMAz9LdxDJkBC2rHAhirtowLEdXKDVzLapEqcIVT1vy9NKEWbtJOfX5/tZ6dTPplP+WQEZzsWh9O4lDlvtgTixDz10aCY8mZfC7b8VPtsyTKXl1JsXa6QOm5AG+0Id5CXOPADl1irhQSSWt3EHXhKsy68Aa2B8AwXlhn57eHQOFWExuNeEJ1cs4S812OFitgWhTOSLmujXR08/EukqjBobcssCoNkK1BQoPHbh/yq71AMOzAF0t28m+D3l5aZg+XNCghysJgqS6AEsrjSzc1q8YfopS0rocoPwJtnp0R/tHucoamktT5rmYSKNxsdDx9ipv0jhUtF5JecfYC1fk2edMHnfOHECWnhHTKoZRHvyZuXMHmDlpJaho4DTITQzq++wrrUl/4Kd5n/c4r4/gH4Uu2MwDCkT649I35FOupDR0XUtoMuOO0aSVV0indHtaP78 [...]
   },
   "Metadata": {
    "aws:cdk:path": "MyCdkProjectStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "httpszl0eev7952executeapiuseast2amazonawscomprodEndpoint96E46570": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "https://",
      {
       "Ref": "httpszl0eev7952executeapiuseast2amazonawscomprod6204E03C"
      },
      ".execute-api.us-east-2.",
      {
       "Ref": "AWS::URLSuffix"
      },
      "/",
      {
       "Ref": "httpszl0eev7952executeapiuseast2amazonawscomprodDeploymentStageprodD75B1C25"
      },
      "/"
     ]
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
